--- a/index.html
+++ b/index.html
@@ -738,24 +738,24 @@
         </div>
         
     </div>
-    <!-- Footer End -->
-
-    <iframe src="chat-widget.html" 
-    style="width: 100%; height: 0; border: none;" 
-    id="chat-widget-iframe"></iframe>
+    <!-- Footer End -->   
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-0 back-to-top"><i class="bi bi-arrow-up"></i></a>
 
-
+    <iframe src="chat-widget.html"
+    style="width: 100%; height: 0; border: none; position: fixed; bottom: 0; right: 0; z-index: 900;"
+    id="chat-widget-iframe"></iframe>
 
     <script>
-    // Adjust iframe height dynamically
     const iframe = document.getElementById('chat-widget-iframe');
+
+    // Adjust iframe height dynamically after it loads
     iframe.onload = function() {
-        iframe.style.height = iframe.contentWindow.document.body.scrollHeight + 'px';
+    iframe.style.height = iframe.contentWindow.document.body.scrollHeight + 'px';
     };
     </script>
+
 
 
     <!-- JavaScript Libraries -->
