--- a/chat-widget.html
+++ b/chat-widget.html
@@ -1,14 +1,20 @@
-<!-- chat-widget.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="css/styles.css" rel="stylesheet">
+  <title>WhatsApp Live Chat Widget</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Template Stylesheet -->
+  <link href="css/style.css" rel="stylesheet">
+
 </head>
 <body>
-  <!-- WhatsApp Live Chat Widget -->
+
+  <!-- Chat Widget -->
   <div id="chat-widget" class="card shadow">
+    <!-- Header with Profile and Status -->
     <div class="card-header d-flex align-items-center">
       <div class="profile-container">
         <img src="img/logo3.jpg" alt="Agent Profile" class="profile-img">
@@ -21,6 +27,7 @@
       <span class="ms-auto close-widget" role="button">&times;</span>
     </div>
 
+    <!-- Chat Body -->
     <div class="chat-body-upper flex-grow-1">
       <div class="message-bubble" id="message-bubble">
         Hi there 👋 <br> How can I help you?
@@ -28,10 +35,9 @@
       </div>
     </div>
 
+    <!-- Start Chat Button -->
     <div class="chat-body-lower">
-      <a href="https://wa.me/19179456992" class="chat-button" target="_blank">
-        <img src="img/chat-bubble.svg" alt="chat bubble" style="width: 80%;">
-      </a>
+      <a href="https://wa.me/19179456992" class="chat-button" target="_blank"><img src="img/chat-bubble.svg" alt="chat bubble" style="width: 80%;"></a>
     </div>
   </div>
 
@@ -41,15 +47,46 @@
     <span class="notice-indicator"></span>
   </button>
 
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
   <script>
-    document.getElementById('whatsapp-button').addEventListener('click', function() {
-      const widget = document.getElementById('chat-widget');
-      widget.classList.toggle('show');
+    const whatsappButton = document.getElementById("whatsapp-button");
+    const chatWidget = document.getElementById("chat-widget");
+    const messageBubble = document.getElementById("message-bubble");
+
+    // Toggle chat widget visibility
+    whatsappButton.addEventListener("click", function() {
+      chatWidget.classList.toggle("show");
+
+      // Trigger fade-in animation for the message bubble after the widget shows
+      if (chatWidget.classList.contains("show")) {
+        setTimeout(() => {
+          messageBubble.classList.add("fade-message-in");
+        }, 300);
+      } else {
+        messageBubble.classList.remove("fade-message-in");
+      }
     });
 
-    document.querySelector('.close-widget').addEventListener('click', function() {
-      document.getElementById('chat-widget').classList.remove('show');
+    // Close the chat widget when the close icon is clicked
+    document.querySelector(".close-widget").addEventListener("click", function() {
+      chatWidget.classList.remove("show");
+      messageBubble.classList.remove("fade-message-in");
     });
+
+    // Display real-time message time
+    function updateMessageTime() {
+      const now = new Date();
+      const hours = now.getHours().toString().padStart(2, '0');
+      const minutes = now.getMinutes().toString().padStart(2, '0');
+      document.getElementById("message-time").textContent = `${hours}:${minutes}`;
+    }
+
+    // Update message time every minute
+    updateMessageTime();
+    setInterval(updateMessageTime, 60000);
   </script>
+
 </body>
 </html>
