--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@
     <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-0 back-to-top"><i class="bi bi-arrow-up"></i></a>
 
     <iframe src="chat-widget.html"
-    style="width: 100%; height: 0; border: none; position: fixed; bottom: 0; right: 0; z-index: 90;"
+    style="width: 100%; height: 400px; border: none; position: fixed; bottom: 0; right: 0; z-index: 90;"
     id="chat-widget-iframe"></iframe>
 
     <script>
@@ -752,9 +752,7 @@
 
     // Adjust iframe height dynamically after it loads
     iframe.onload = function() {
-        const contentHeight = iframe.contentWindow.document.body.scrollHeight;
-        console.log('Calculated content height:', contentHeight);
-        iframe.style.height = contentHeight + 'px';
+    iframe.style.height = iframe.contentWindow.document.body.scrollHeight + 'px';
     };
     </script>
 
