--- a/index.html
+++ b/index.html
@@ -748,12 +748,11 @@
     id="chat-widget-iframe"></iframe>
 
     <script>
-    const iframe = document.getElementById('chat-widget-iframe');
-
-    // Adjust iframe height dynamically after it loads
     iframe.onload = function() {
-    iframe.style.height = iframe.contentWindow.document.body.scrollHeight + 'px';
-    };
+  const contentHeight = iframe.contentWindow.document.body.scrollHeight;
+  console.log('Calculated content height:', contentHeight);
+  iframe.style.height = (contentHeight || 350) + 'px';
+};
     </script>
 
 
