--- a/chat-widget.html
+++ b/chat-widget.html
@@ -1,56 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WhatsApp Live Chat Widget</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Template Stylesheet -->
-  <link href="css/style.css" rel="stylesheet">
+<!-- chat-widget.html -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="css/style.css" rel="stylesheet">
 
-</head>
-<body>
-
-  <!-- Chat Widget -->
-  <div id="chat-widget" class="card shadow">
-    <!-- Header with Profile and Status -->
-    <div class="card-header d-flex align-items-center">
-      <div class="profile-container">
-        <img src="img/logo3.jpg" alt="Agent Profile" class="profile-img">
-        <span class="online-indicator"></span>
-      </div>
-      <div class="agent-info flex-grow-1">
-        <strong>May Jordan</strong>
-        <br><span class="status-text">Online</span>
-      </div>
-      <span class="ms-auto close-widget" role="button">&times;</span>
+<div id="chat-widget" class="card shadow">
+  <!-- Header with Profile and Status -->
+  <div class="card-header d-flex align-items-center">
+    <div class="profile-container">
+      <img src="img/logo3.jpg" alt="Agent Profile" class="profile-img">
+      <span class="online-indicator"></span>
     </div>
-
-    <!-- Chat Body -->
-    <div class="chat-body-upper flex-grow-1">
-      <div class="message-bubble" id="message-bubble">
-        Hi there 👋 <br> How can I help you?
-        <div class="message-time" id="message-time"></div>
-      </div>
+    <div class="agent-info flex-grow-1">
+      <strong>May Jordan</strong>
+      <br><span class="status-text">Online</span>
     </div>
+    <span class="ms-auto close-widget" role="button">&times;</span>
+  </div>
 
-    <!-- Start Chat Button -->
-    <div class="chat-body-lower">
-      <a href="https://wa.me/19179456992" class="chat-button" target="_blank"><img src="img/chat-bubble.svg" alt="chat bubble" style="width: 80%;"></a>
+  <!-- Chat Body -->
+  <div class="chat-body-upper flex-grow-1">
+    <div class="message-bubble" id="message-bubble">
+      Hi there 👋 <br> How can I help you?
+      <div class="message-time" id="message-time"></div>
     </div>
   </div>
 
-  <!-- Floating WhatsApp Button -->
-  <button id="whatsapp-button" class="position-fixed">
-    <img src="img/logo-whatsapp.svg" alt="WhatsApp Logo" class="whatsapp-logo">
-    <span class="notice-indicator"></span>
-  </button>
+  <!-- Start Chat Button -->
+  <div class="chat-body-lower">
+    <a href="https://wa.me/19179456992" class="chat-button" target="_blank">
+      <img src="img/chat-bubble.svg" alt="chat bubble" style="width: 80%;">
+    </a>
+  </div>
+</div>
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Floating WhatsApp Button -->
+<button id="whatsapp-button" class="position-fixed">
+  <img src="img/logo-whatsapp.svg" alt="WhatsApp Logo" class="whatsapp-logo">
+  <span class="notice-indicator"></span>
+</button>
 
-  <script>
+<script>
+  // Initialize the chat widget functionality
+  (function() {
     const whatsappButton = document.getElementById("whatsapp-button");
     const chatWidget = document.getElementById("chat-widget");
     const messageBubble = document.getElementById("message-bubble");
@@ -59,7 +49,6 @@
     whatsappButton.addEventListener("click", function() {
       chatWidget.classList.toggle("show");
 
-      // Trigger fade-in animation for the message bubble after the widget shows
       if (chatWidget.classList.contains("show")) {
         setTimeout(() => {
           messageBubble.classList.add("fade-message-in");
@@ -82,11 +71,7 @@
       const minutes = now.getMinutes().toString().padStart(2, '0');
       document.getElementById("message-time").textContent = `${hours}:${minutes}`;
     }
-
-    // Update message time every minute
     updateMessageTime();
     setInterval(updateMessageTime, 60000);
-  </script>
-
-</body>
-</html>
+  })();
+</script>
