--- a/index.html
+++ b/index.html
@@ -747,30 +747,76 @@
     <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-0 back-to-top"><i class="bi bi-arrow-up"></i></a>
 
     
-    <!-- Script to load chat-widget.html -->
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-        // Fetch the chat-widget.html fragment
-        fetch("chat-widget.html")
-            .then(response => {
-            if (!response.ok) {
-                throw new Error("Network response was not ok");
-            }
-            return response.text();
-            })
-            .then(html => {
-            // Insert the fetched HTML into the container
-            document.getElementById("chat-widget-container").innerHTML = html;
+<!-- Script to load and initialize the chat widget -->
+<script>
+    // Wait for the DOM to be fully loaded
+    document.addEventListener("DOMContentLoaded", function() {
+      fetch("chat-widget.html")
+        .then(response => {
+          if (!response.ok) {
+            throw new Error("Network response was not ok");
+          }
+          return response.text();
+        })
+        .then(html => {
+          // Inject the HTML fragment into the container
+          document.getElementById("chat-widget-container").innerHTML = html;
 
-            // Optionally, if your inserted HTML includes <script> tags that need to run,
-            // you might need to reinitialize or execute them.
-            // In our case, the widget script is self-contained and will run on insertion.
-            })
-            .catch(error => {
-            console.error("Error loading chat widget:", error);
-            });
+          // Initialize the chat widget functionality
+          initializeChatWidget();
+        })
+        .catch(error => {
+          console.error("Error loading chat widget:", error);
         });
-    </script>
+    });
+
+    // Define a function to attach event listeners and initialize the widget
+    function initializeChatWidget() {
+      const whatsappButton = document.getElementById("whatsapp-button");
+      const chatWidget = document.getElementById("chat-widget");
+      const messageBubble = document.getElementById("message-bubble");
+
+      if (!whatsappButton || !chatWidget || !messageBubble) {
+        console.error("Chat widget elements not found. Ensure the IDs match.");
+        return;
+      }
+
+      // Toggle chat widget visibility on WhatsApp button click
+      whatsappButton.addEventListener("click", function() {
+        chatWidget.classList.toggle("show");
+
+        if (chatWidget.classList.contains("show")) {
+          setTimeout(() => {
+            messageBubble.classList.add("fade-message-in");
+          }, 300);
+        } else {
+          messageBubble.classList.remove("fade-message-in");
+        }
+      });
+
+      // Close the widget when the close icon is clicked
+      const closeIcon = document.querySelector(".close-widget");
+      if (closeIcon) {
+        closeIcon.addEventListener("click", function() {
+          chatWidget.classList.remove("show");
+          messageBubble.classList.remove("fade-message-in");
+        });
+      }
+
+      // Function to update the message time in real-time
+      function updateMessageTime() {
+        const now = new Date();
+        const hours = now.getHours().toString().padStart(2, '0');
+        const minutes = now.getMinutes().toString().padStart(2, '0');
+        const messageTime = document.getElementById("message-time");
+        if (messageTime) {
+          messageTime.textContent = `${hours}:${minutes}`;
+        }
+      }
+      updateMessageTime();
+      setInterval(updateMessageTime, 60000);
+    }
+  </script>
 
 
     <!-- JavaScript Libraries -->
