--- a/industry.html
+++ b/industry.html
@@ -74,6 +74,7 @@
                         <a href="industry.html#toys-games" class="dropdown-item">Toys & Games</a>
                         <a href="industry.html#home-improvement" class="dropdown-item">Home Improvement</a>
                         <a href="industry.html#furniture" class="dropdown-item">Furniture</a>
+                        <a href="industry.html#automative-parts" class="dropdown-item">Automative Parts</a>
                     </div>
                 </div>
                 <a href="schedule.html" class="nav-item nav-link">Schedules</a>
@@ -88,7 +89,7 @@
 
     <!-- Page Header Start -->
     <div class="container-fluid page-header6 py-5 mt-n9" >
-        <h1 class="bottom-text text-center col-lg-7 display-5 text-white mb-3 animated slideInDown">Tailored Logistics Solutions for Every Sector</h1>
+        <h1 class="bottom-text text-center col-lg-7 display-5 mb-3 animated slideInDown">Tailored Logistics Solutions for Every Sector</h1>
     </div>
     <div class="container py-5">
         <!--<h1 class="display-3 text-white mb-3 animated slideInDown">About Us</h1>-->
@@ -329,6 +330,43 @@
         </div>
     </div>
     <!-- Furniture End -->
+
+    <!-- automative parts Start -->
+    <div id="automative-parts" class="container-fluid overflow-hidden py-5 px-lg-0">
+        <div class="container feature py-5 px-lg-0">
+            <div class="row g-5 mx-lg-0">
+                <div class="col-lg-6 feature-text wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="d-flex mb-5 wow fadeInUp" data-wow-delay="0.3s">
+                        <h1 class="ms-4">Home Improvement</h1>
+                    </div>
+                    <div class="d-flex mb-5 wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="ms-4">
+                            <h5>Secure Shipping</h5>
+                            <p class="mb-0">Providing robust shipping solutions tailored to the automotive industry, ensuring that high-precision parts are transported safely and securely, with minimized risk of damage from vibrations and external impacts. </p>
+                        </div>
+                    </div>
+                    <div class="d-flex mb-5 wow fadeIn" data-wow-delay="0.5s">
+                        <div class="ms-4">
+                            <h5>Impact Protection Packaging</h5>
+                            <p class="mb-0">Custom packaging designed specifically for automotive components, incorporating advanced cushioning and secure containment to protect delicate parts during transit.</p>
+                        </div>
+                    </div>
+                    <div class="d-flex mb-0 wow fadeInUp" data-wow-delay="0.7s">
+                        <div class="ms-4">
+                            <h5>Tailored Logistics Solutions</h5>
+                            <p class="mb-0">Offering specialized logistics and supply chain management for automotive parts, ensuring efficient, timely delivery from manufacturers to assembly lines, dealerships, or service centers.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 pe-lg-0 wow fadeInRight" data-wow-delay="0.1s" style="min-height: 400px;">
+                    <div class="position-relative h-100">
+                        <img class="position-absolute img-fluid w-100 h-100" src="img/automative.jpg" style="object-fit: cover;" alt="technology">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- automative parts End -->
     
 
     <!-- Footer Start -->
@@ -371,6 +409,7 @@
                     <a class="btn btn-link" href="industry.html#toys-games">Toys & Games</a>
                     <a class="btn btn-link" href="industry.html#home-improvement">Home Improvement</a>
                     <a class="btn btn-link" href="industry.html#furniture">Furniture</a>
+                    <a class="btn btn-link" href="industry.html#automative-parts">Automative Parts</a>
                 </div>
             </div>
         </div>
