--- a/location.html
+++ b/location.html
@@ -15,7 +15,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Roboto:wght@500;700&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -109,6 +108,7 @@
                         <a href="industry.html#toys-games" class="dropdown-item">Toys & Games</a>
                         <a href="industry.html#home-improvement" class="dropdown-item">Home Improvement</a>
                         <a href="industry.html#furniture" class="dropdown-item">Furniture</a>
+                        <a href="industry.html#automative-parts" class="dropdown-item">Automative Parts</a>
                     </div>
                 </div>
                 <a href="schedule.html" class="nav-item nav-link">Schedules</a>
@@ -446,6 +446,7 @@
                     <a class="btn btn-link" href="industry.html#toys-games">Toys & Games</a>
                     <a class="btn btn-link" href="industry.html#home-improvement">Home Improvement</a>
                     <a class="btn btn-link" href="industry.html#furniture">Furniture</a>
+                    <a class="btn btn-link" href="industry.html#automative-parts">Automative Parts</a>
                     
                 </div>
             </div>
@@ -468,7 +469,6 @@
         </div>
     </div>
     <!-- Footer End -->
-
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-0 back-to-top"><i class="bi bi-arrow-up"></i></a>
 
