--- a/schedule.html
+++ b/schedule.html
@@ -74,6 +74,7 @@
                         <a href="industry.html#toys-games" class="dropdown-item">Toys & Games</a>
                         <a href="industry.html#home-improvement" class="dropdown-item">Home Improvement</a>
                         <a href="industry.html#furniture" class="dropdown-item">Furniture</a>
+                        <a href="industry.html#automative-parts" class="dropdown-item">Automative Parts</a>
                     </div>
                 </div>
                 <a href="schedule.html" class="nav-item nav-link active">Schedules</a>
@@ -89,7 +90,7 @@
 
     <!-- Page Header Start -->
     <div class="container-fluid page-header3 py-5 mt-n9" >
-        <h1 class="bottom-text text-center col-lg-7 display-5 text-white mb-3 animated slideInDown">Reliable Shipping Timelines for Seamless Delivery</h1>
+        <h1 class="bottom-text text-center col-lg-7 display-5 mb-3 animated slideInDown">Reliable Shipping Timelines for Seamless Delivery</h1>
     </div>
     <div class="container py-5">
         <!--<h1 class="display-3 text-white mb-3 animated slideInDown">About Us</h1>-->
@@ -277,6 +278,7 @@
                     <a class="btn btn-link" href="industry.html#toys-games">Toys & Games</a>
                     <a class="btn btn-link" href="industry.html#home-improvement">Home Improvement</a>
                     <a class="btn btn-link" href="industry.html#furniture">Furniture</a>
+                    <a class="btn btn-link" href="industry.html#automative-parts">Automative Parts</a>
                     
                 </div>
             </div>
