--- a/contact.html
+++ b/contact.html
@@ -82,6 +82,7 @@
                         <a href="industry.html#toys-games" class="dropdown-item">Toys & Games</a>
                         <a href="industry.html#home-improvement" class="dropdown-item">Home Improvement</a>
                         <a href="industry.html#furniture" class="dropdown-item">Furniture</a>
+                        <a href="industry.html#automative-parts" class="dropdown-item">Automative Parts</a>
                     </div>
                 </div>
                 <a href="schedule.html" class="nav-item nav-link">Schedules</a>
@@ -96,7 +97,7 @@
 
     <!-- Page Header Start -->
     <div class="container-fluid page-header5 py-5 mt-n9" >
-        <h1 class="bottom-text text-center col-lg-7 display-5 text-white mb-3 animated slideInDown">We're Here to Help with Your Logistics Needs</h1>
+        <h1 class="bottom-text text-center col-lg-7 display-5 mb-3 animated slideInDown">We're Here to Help with Your Logistics Needs</h1>
     </div>
     <div class="container py-5">
         <!--<h1 class="display-3 text-white mb-3 animated slideInDown">About Us</h1>-->
@@ -210,6 +211,7 @@
                     <a class="btn btn-link" href="industry.html#toys-games">Toys & Games</a>
                     <a class="btn btn-link" href="industry.html#home-improvement">Home Improvement</a>
                     <a class="btn btn-link" href="industry.html#furniture">Furniture</a>
+                    <a class="btn btn-link" href="industry.html#automative-parts">Automative Parts</a>
                     
                 </div>
             </div>
