--- a/privacy.html
+++ b/privacy.html
@@ -73,6 +73,7 @@
                             <a href="industry.html#toys-games" class="dropdown-item">Toys & Games</a>
                             <a href="industry.html#home-improvement" class="dropdown-item">Home Improvement</a>
                             <a href="industry.html#furniture" class="dropdown-item">Furniture</a>
+                            <a href="industry.html#automative-parts" class="dropdown-item">Automative Parts</a>
                         </div>
                     </div>
                     <a href="schedule.html" class="nav-item nav-link">Schedules</a>
@@ -249,6 +250,7 @@
                     <a class="btn btn-link" href="industry.html#toys-games">Toys & Games</a>
                     <a class="btn btn-link" href="industry.html#home-improvement">Home Improvement</a>
                     <a class="btn btn-link" href="industry.html#furniture">Furniture</a>
+                    <a class="btn btn-link" href="industry.html#automative-parts">Automative Parts</a>
                     
                 </div>
             </div>
