--- a/about.html
+++ b/about.html
@@ -87,11 +87,22 @@
     <!-- Navbar End -->
 
 
-    <!-- Page Header Start -->
+    <!-- Page Header Start 
     <div class="container-fluid page-header py-5 mt-n9" >
         <h1 class="bottom-text text-center display-5 text-white mb-3 animated slideInDown">Building Trust Through Excellence in Logistics</h1>
     </div>
-    <!-- Page Header End -->
+     Page Header End -->
+
+
+<!-- mission Start -->  
+    <div class="container-fluid py-5 bg-light2">
+        <div class="container-xxl py-5  " style="width: 60%;">
+            <div class="mt-n9 text-center wow fadeInUp" data-wow-delay="0.1s">
+                <h1 class="mb-5 ">Who We Are and What Drives Us</h1>
+                <p class="">May Jordan Logistics was founded with a vision to redefine excellence in the logistics industry. From humble beginnings, the company has grown into a trusted provider of comprehensive logistics solutions, serving clients across diverse industries worldwide.</p>
+            </div>
+        </div>
+    </div>      
     <div class="container py-5">
         <!--<h1 class="display-3 text-white mb-3 animated slideInDown">About Us</h1>-->
         <nav aria-label="breadcrumb animated slideInDown">
@@ -101,17 +112,6 @@
             </ol>
         </nav>
     </div>
-
-<!-- mission Start -->  
-    <div class="container-xxl py-5 bg-light2">
-        <div class="container py-5" style="width: 60%;">
-            <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h1 class="mb-5 ">Who We Are and What Drives Us</h1>
-                <p class="">May Jordan Logistics was founded with a vision to redefine excellence in the logistics industry. From humble beginnings, the company has grown into a trusted provider of comprehensive logistics solutions, serving clients across diverse industries worldwide.</p>
-            </div>
-        </div>
-    </div>      
-  
     <div class="container-fluid overflow-hidden py-5 px-lg-0">
         <div class="container feature py-5 px-lg-0">
             <div class="row g-5 mx-lg-0">
@@ -192,7 +192,7 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-secondary mb-3">MAY JORDAN LOGISTICS INC. </h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>505 Northern Blvd, Suite 314,  Great Neck, NY 11021</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>505 Northern Blvd, Suite 314,  </p><p style="text-indent: 28px;">Great Neck, NY 11021</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>(516) 304 5888</p>
                     <p class="mb-2"><i class="fa fa-fax me-3"></i>(516) 304 5883</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@mayjordan.com</p>
