--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-5">
                                 <!----<h6 class="text-black text-uppercase mb-3 animated slideInDown text-primary">SAFETY • INTEGRITY • TENACITY</h6>-->
-                                <h2 class="text-light animated slideInDown mb-4">Leading global provider of essential supply chain solutions</h2>
+                                <h2 class="text-light animated slideInDown mb-4">Safety. Integrity. Tenacity</h2>
                                 <p class=" text-light mb-4 pb-2 hidden"></p>
                                 </br><a href="service.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
                                 </br></br><a href="contact.html" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Free Quote</a>
@@ -137,7 +137,7 @@
     </div>
     <!-- Carousel End -->
 
-    <!-- About Start -->
+    <!-- About Start 
     <div class="container-fluid overflow-hidden py-5 px-lg-0">
         <div class="container about py-5 px-lg-0">
             <div class="row g-5 mx-lg-0">
@@ -167,7 +167,7 @@
             </div>
         </div>
     </div>
-    <!-- About End -->
+     About End -->
 
     <!-- Our Global Network Start -->
     <div class="container-fluid page-header7 py-5 mt-n9">
@@ -176,7 +176,8 @@
                 <div class="col-lg-8 wow fadeInUp text-center" data-wow-delay="0.1s">
                     <h6 class="text-primary text-uppercase mb-3">Our Global Network</h6>
                     <h1 class="mb-5">Trusted International Leader in Comprehensive Supply Chain Solutions</h1>
-                    <p class="mb-5 text-black">At May Jordan Logistics Inc., we leverage a vast global network to provide seamless, end-to-end logistics solutions that drive businesses success. With strategically positioned offices and a dedicated team worldwide, we navigate complex supply chains with unmatched efficiency and precision. Our customers trust us for our unwavering commitment to excellence, personalized service, and innovative solutions tailored to their unique needs. Whether managing intricate global shipments to optimizing supply chain performance, we are the reliable business partner businesses turn to for logistics solutions that deliver results.</p>
+                    <p class="mb-5 text-black">At May Jordan Logistics Inc., we leverage a vast global network to provide seamless, end-to-end logistics solutions that drive businesses success. 
+                        With strategically positioned offices and a dedicated team worldwide, we navigate complex supply chains with unmatched efficiency and precision. </p>
 
                 </div>
                
@@ -482,7 +483,7 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-secondary mb-3">MAY JORDAN LOGISTICS INC. </h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>505 Northern Blvd, Suite 314,  Great Neck, NY 11021</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>505 Northern Blvd, Suite 314,  </p><p style="text-indent: 28px;">Great Neck, NY 11021</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>(516) 304 5888</p>
                     <p class="mb-2"><i class="fa fa-fax me-3"></i>(516) 304 5883</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@mayjordan.com</p>
