--- a/location.html
+++ b/location.html
@@ -156,6 +156,27 @@
             </div>
         </div>
     </div>
+
+    <div class="container-fluid overflow-hidden py-5 px-lg-0">
+        <div class="container about py-5 px-lg-0">
+            <div class="row g-5 mx-lg-0">
+                <div class="col-lg-6 ps-lg-0 wow fadeInLeft" data-wow-delay="0.1s" style="min-height: 400px;">
+                    <div class="position-relative h-100">
+                        <img class="position-absolute img-fluid w-100 h-100" src="img/location-mc.jpg" style="object-fit: cover;" alt="Singapore">
+                    </div>
+                </div>
+                <div class="col-lg-6 about-text wow fadeInUp" data-wow-delay="0.3s">
+                    <h1 class="mb-5">Mexico</h1>
+                    <div class="">
+                        <h4 class="text-primary">May Jordan Logistics S.A de C.V. </h4>
+                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Av. Ejército Nacional Mexicano 843-B, Granada, Miguel Hidalgo, 11520 Ciudad de México, CDMX, Mexico</p>
+                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@mayjordan.com</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="container-fluid overflow-hidden py-5 px-lg-0">
         <div class="container about py-5 px-lg-0">
             <div class="row g-5 mx-lg-0">
@@ -176,25 +197,7 @@
         </div>
     </div>
 
-    <div class="container-fluid overflow-hidden py-5 px-lg-0">
-        <div class="container about py-5 px-lg-0">
-            <div class="row g-5 mx-lg-0">
-                <div class="col-lg-6 ps-lg-0 wow fadeInLeft" data-wow-delay="0.1s" style="min-height: 400px;">
-                    <div class="position-relative h-100">
-                        <img class="position-absolute img-fluid w-100 h-100" src="img/location-mc.jpg" style="object-fit: cover;" alt="Singapore">
-                    </div>
-                </div>
-                <div class="col-lg-6 about-text wow fadeInUp" data-wow-delay="0.3s">
-                    <h1 class="mb-5">Mexico</h1>
-                    <div class="">
-                        <h4 class="text-primary">May Jordan Logistics S.A de C.V. </h4>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>C. Nte. 188 634, Pensador Mexicano, Venustiano Carranza, 15510 Ciudad de México, CDMX, Mexico</p>
-                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@mayjordan.com</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+
 
     <div class="container-fluid overflow-hidden py-5 px-lg-0">
         <div class="container about py-5 px-lg-0">
@@ -261,7 +264,7 @@
             <div class="row g-5 mx-lg-0">
                 <div class="col-lg-6 ps-lg-0 wow fadeInLeft" data-wow-delay="0.1s" style="min-height: 400px;">
                     <div class="position-relative h-100">
-                        <img class="position-absolute img-fluid w-100 h-100" src="img/location-vn.jpg" style="object-fit: cover;" alt="Singapore">
+                        <img class="position-absolute img-fluid w-100 h-100" src="img/location-vn.png" style="object-fit: cover;" alt="Singapore">
                     </div>
                 </div>
                 <div class="col-lg-6 about-text wow fadeInUp" data-wow-delay="0.3s">
@@ -281,7 +284,7 @@
     <div class="container-fluid page-header7 py-5 mt-n9">
         <div class="container py-5">
             <h1 class="text-center mb-4">Our Global Network</h1>
-            <p class="text-center mb-5">Our Global Network spans over 55 countries worldwide.</p>
+            <p class="text-center mb-5">Our Global Network spans over 54 countries worldwide.</p>
             
             <div class="accordion" id="globalNetwork">
                 <!-- Americas Section -->
@@ -349,7 +352,7 @@
                                 <div class="col-md-3">Israel</div>
                                 <div class="col-md-3">Japan</div>
                                 <div class="col-md-3">Jordan</div>
-                                <div class="col-md-3">Korea</div>
+                                <div class="col-md-3">South Korea</div>
                                 <div class="col-md-3">Malaysia</div>
                                 <div class="col-md-3">New Zealand</div>
                                 <div class="col-md-3">Philippines</div>
@@ -387,7 +390,6 @@
                                 <div class="col-md-3">Norway</div>
                                 <div class="col-md-3">Poland</div>
                                 <div class="col-md-3">Portugal</div>
-                                <div class="col-md-3">Russia</div>
                                 <div class="col-md-3">Spain</div>
                                 <div class="col-md-3">Sweden</div>
                                 <div class="col-md-3">Switzerland</div>
@@ -412,7 +414,7 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-secondary mb-3">MAY JORDAN LOGISTICS INC. </h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>505 Northern Blvd, Suite 314,  Great Neck, NY 11021</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>505 Northern Blvd, Suite 314,  </p><p style="text-indent: 28px;">Great Neck, NY 11021</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>(516) 304 5888</p>
                     <p class="mb-2"><i class="fa fa-fax me-3"></i>(516) 304 5883</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@mayjordan.com</p>
