--- a/schedule.html
+++ b/schedule.html
@@ -244,7 +244,7 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-secondary mb-3">MAY JORDAN LOGISTICS INC. </h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>505 Northern Blvd, Suite 314,  Great Neck, NY 11021</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>505 Northern Blvd, Suite 314,  </p><p style="text-indent: 28px;">Great Neck, NY 11021</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>(516) 304 5888</p>
                     <p class="mb-2"><i class="fa fa-fax me-3"></i>(516) 304 5883</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@mayjordan.com</p>
